# world-starknet-relayer

./: .env.example  Cargo.toml  deploy-contracts.sh  rustfmt.toml
contracts/: Scarb.toml
contracts/store/: Scarb.toml
contracts/store/src/: lib.cairo
contracts/store/tests/: fixture.cairo
contracts/verifier/: Scarb.toml
contracts/verifier/src/: lib.cairo  world_relayer_verifier.cairo
contracts/verifier/tests/: fixtures.cairo  verifier_test.cairo
crates/core/: Cargo.toml
crates/core/src/: header.rs  lib.rs
crates/core/src/proofs/: account.rs  mod.rs  storage.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  header.rs  lib.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
relayer/: Cargo.toml
relayer/abi/: WorldIdentityManager.json
relayer/src/: listener.rs  main.rs  prover.rs  publisher.rs  relayer.rs
