[package]
name = "world-relayer"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge relayer for World ID identity management"
license = "MIT/Apache-2.0"

[dependencies]
alloy = { version = "0.11.1", features = ["serde", "provider-ws"] }
clap = { version = "4.5.29", features = ["env", "derive"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", tag = "v0.15.4" }
risc0-ethereum-contracts = "1.3.2"
risc0-zkvm = { version = "1.2.2" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# workspace
types.workspace = true
methods.workspace = true
futures-util = "0.3.31"
serde = "1.0.218"
starknet = "0.13.0"
serde_json = "1.0.139"
alloy-chains = "0.1.66"
